# models/article.go
@@ -13,8 +13,9 @@ type Article struct {
 	ID string
 	Content
 	AuthorID  string
-	CreatedAt *time.Time
+	CreatedAt time.Time
 	UpdatedAt *time.Time
+	DeletedAt *time.Time
 }
 
 // ArticleCreate ...
@@ -27,5 +28,15 @@ type ArticleCreate struct {
 type ArticleUpdate struct {
 	ID string
 	Content
-	AuthorID string
+	//AuthorID string
+}
+
+// PackedArticleModel ...
+type PackedArticleModel struct {
+	ID string
+	Content
+	Author    Author
+	CreatedAt time.Time
+	UpdatedAt *time.Time
+	DeletedAt *time.Time
 }
