# models/author.go
@@ -9,6 +9,7 @@ type Author struct {
 	Lastname  string
 	CreatedAt *time.Time
 	UpdatedAt *time.Time
+	DeletedAt *time.Time
 }
 
 // AuthorCreate ...
@@ -22,13 +23,4 @@ type AuthorUpdate struct {
 	ID        string
 	Firstname string
 	Lastname  string
-}
-
-// PackedArticleModel ...
-type PackedArticleModel struct {
-	ID string
-	Content
-	Author    Author
-	CreatedAt time.Time
-	UpdatedAt *time.Time
 }
